--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,3 +1,5 @@
+
+{% load staticfiles %}
 <html>
     <head>
         <title>ciao
@@ -13,5 +15,6 @@
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endfor %}
+
   </body>
 </html>
