--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     	
-  
+  {%block content%}
 {% for post in posts %}
     <div>
         <p>published: {{ post.published_date }}</p>
@@ -15,6 +15,7 @@
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endfor %}
-
+{%endblock%}
   </body>
+
 </html>
